deploy: c9a9f2973e6289ea3a87dcb5c235e1cdf1e1a529

--- a/r/authors.html
+++ b/r/authors.html
@@ -62,17 +62,15 @@
     </div>
 
 
-    <p>Lovelace R, Carlino D (2024).
+    <p>Lovelace R, Carlino D (2025).
 <em>od2net: Convert 'Origin-Destination' Data to Route Networks</em>.
-R package version 0.0.0.9000,
-https://github.com/urban-analytics-technology-platform/od2net, <a href="https://urban-analytics-technology-platform.github.io/od2net/r/" class="external-link">https://urban-analytics-technology-platform.github.io/od2net/r/</a>.
+R package version 0.0.0.9000, <a href="https://urban-analytics-technology-platform.github.io/od2net/r/" class="external-link">https://urban-analytics-technology-platform.github.io/od2net/r/</a>.
 </p>
     <pre>@Manual{,
   title = {od2net: Convert 'Origin-Destination' Data to Route Networks},
   author = {Robin Lovelace and Dustin Carlino},
-  year = {2024},
-  note = {R package version 0.0.0.9000,
-    https://github.com/urban-analytics-technology-platform/od2net},
+  year = {2025},
+  note = {R package version 0.0.0.9000},
   url = {https://urban-analytics-technology-platform.github.io/od2net/r/},
 }</pre>
 
@@ -87,7 +85,7 @@ https://github.com/urban-analytics-technology-platform/od2net, <a href="https://
 </div>
 
 <div class="pkgdown">
-  <p></p><p>Site built with <a href="https://pkgdown.r-lib.org/" class="external-link">pkgdown</a> 2.1.1.</p>
+  <p></p><p>Site built with <a href="https://pkgdown.r-lib.org/" class="external-link">pkgdown</a> 2.1.3.</p>
 </div>
 
       </footer></div>
